# VIDE-AI-ENABLED-VIDEO-AND-IMAGE-EDITOR

./: .env.example  .gitignore  AGENTS.md  README.md  VIDE_deep_research.md.resolved  docker-compose.yml  go.mod  go.sum  main.go  vide
cmd/: edit.go  root.go
frontend/: package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: CommandBar.tsx  DirectorPanel.tsx  Timeline.tsx  WasmCanvas.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useVideoStore.ts
frontend/wasm-renderer/: Cargo.toml
frontend/wasm-renderer/src/: lib.rs
gateway/: Dockerfile  go.mod  go.sum  main.go
gateway/database/: db.go
gateway/handlers/: auth.go  jobs.go  nlp.go  projects.go  upload.go
gateway/middleware/: auth.go
gateway/models/: models.go
internal/engine/: dag.go  ffmpeg.go
internal/llm/: client.go
internal/ui/: model.go
workers/: Dockerfile  ai_models.py  requirements.txt  tasks.py  worker.py
