[package]
name = "vide-wasm-renderer"
version = "0.1.0"
authors = ["VIDE Open Source Team"]
edition = "2021"
description = "High-performance WebAssembly timeline rendering engine for the VIDE project"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Window",
  "Document"
]

[profile.release]
# Optimize heavily for size and speed to ensure the frontend loads instantly
opt-level = 3
lto = true
